- Upgrade to java 24 preview - Refactor range slider