@@ -1,6 +1,7 @@
 package hzt.rangeslider;
 
 import javax.swing.JSlider;
+import java.awt.*;
 
 /**
  * An extension of JSlider to select a range of values using two thumb controls.
@@ -11,13 +12,20 @@ import javax.swing.JSlider;
  * supports an inner range defined by a value and an extent.  The upper value
  * returned by RangeSlider is simply the lower value plus the extent.</p>
  */
-public class RangeSlider extends JSlider {
+public final class RangeSlider extends JSlider {
 
     /**
-     * Constructs a RangeSlider with default minimum and maximum values of 0
-     * and 100.
+     * Color of selected range.
      */
-    public RangeSlider() {
+    final Color rangeColor;
+
+    /**
+     * Constructs a RangeSlider with default minimum and maximum values of 0 and 100.
+     * @param rangeColor the range color
+     */
+    public RangeSlider(final Color rangeColor) {
+        this.rangeColor = rangeColor;
+        super();
         initSlider();
     }
 
@@ -25,7 +33,8 @@ public class RangeSlider extends JSlider {
      * Constructs a RangeSlider with the specified default minimum and maximum 
      * values.
      */
-    public RangeSlider(int min, int max) {
+    public RangeSlider(final int min, final int max, final Color rangeColor) {
+        this.rangeColor = rangeColor;
         super(min, max);
         initSlider();
     }
@@ -50,27 +59,19 @@ public class RangeSlider extends JSlider {
     }
 
     /**
-     * Returns the lower value in the range.
-     */
-    @Override
-    public int getValue() {
-        return super.getValue();
-    }
-
-    /**
      * Sets the lower value in the range.
      */
     @Override
-    public void setValue(int value) {
-        int oldValue = getValue();
+    public void setValue(final int value) {
+        final var oldValue = getValue();
         if (oldValue == value) {
             return;
         }
 
         // Compute new value and extent to maintain upper value.
-        int oldExtent = getExtent();
-        int newValue = Math.min(Math.max(getMinimum(), value), oldValue + oldExtent);
-        int newExtent = oldExtent + oldValue - newValue;
+        final var oldExtent = getExtent();
+        final var newValue = Math.clamp(value, getMinimum(), oldValue + oldExtent);
+        final var newExtent = oldExtent + oldValue - newValue;
 
         // Set new value and extent, and fire a single change event.
         getModel().setRangeProperties(newValue, newExtent, getMinimum(), 
@@ -87,10 +88,10 @@ public class RangeSlider extends JSlider {
     /**
      * Sets the upper value in the range.
      */
-    public void setUpperValue(int value) {
+    public void setUpperValue(final int value) {
         // Compute new extent.
-        int lowerValue = getValue();
-        int newExtent = Math.min(Math.max(0, value - lowerValue), getMaximum() - lowerValue);
+        final var lowerValue = getValue();
+        final var newExtent = Math.clamp(0, value - lowerValue, getMaximum() - lowerValue);
         
         // Set extent to set upper value.
         setExtent(newExtent);
